k8s/manifests/minio/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
spec:
  rules:
    - host: s3.bugbear.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http
    - host: minio.bugbear.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: console
  tls:
    - hosts:
        - minio.bugbear.fr
      secretName: portfolio-tls
